--- a/kelas-5/lembah/perkalian.html
+++ b/kelas-5/lembah/perkalian.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -22,153 +22,83 @@
       display: grid;
       place-items: center;
       background: linear-gradient(160deg, var(--bg), #24594d 60%);
-      font-family: "Poppins", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: "Poppins", system-ui, sans-serif;
       color: var(--text);
+      overflow-x: hidden;
     }
-
-    .app {
-      width: min(880px, 96vw);
-      background: var(--panel);
-      border-radius: 22px;
+    .app { width: min(880px, 96vw); background: var(--panel); border-radius: 22px;
       box-shadow: 0 20px 50px rgba(0,0,0,.25), inset 0 0 0 1px var(--outline);
       padding: clamp(18px, 3.2vw, 28px);
+      position: relative;
+      z-index: 2;
     }
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 12px;
-      margin-bottom: 14px;
-    }
-    .brand {
-      font-weight: 800;
-      letter-spacing: .3px;
-    }
-    .pill {
-      background: var(--panel-dark);
-      border: 1px solid var(--outline);
-      padding: 8px 12px;
-      border-radius: 999px;
-      font-size: 14px;
-      opacity: .95;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
+    header { display: flex; align-items: center; justify-content: space-between; gap: 12px; margin-bottom: 14px; }
+    .brand { font-weight: 800; letter-spacing: .3px; }
+    .pill { background: var(--panel-dark); border: 1px solid var(--outline); padding: 8px 12px;
+      border-radius: 999px; font-size: 14px; opacity: .95; display: inline-flex; align-items: center; gap: 8px;
     }
     .stats { display:flex; gap:8px; flex-wrap: wrap; }
-
     .screen { display:none; }
     .screen.active { display:block; }
-
-    /* Start Screen */
-    .start {
-      text-align: center;
-      padding: 24px 8px 10px;
-    }
-    .start h1 {
-      margin: 6px 0 10px;
-      font-size: clamp(22px, 4.2vw, 34px);
-    }
-    .grid2 {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 12px;
-      margin: 12px 0 22px;
-    }
-    .card {
-      background: var(--panel-dark);
-      border: 1px solid var(--outline);
-      border-radius: 18px;
-      padding: 14px;
-      text-align: left;
-    }
+    .start { text-align: center; padding: 24px 8px 10px; }
+    .start h1 { margin: 6px 0 10px; font-size: clamp(22px, 4.2vw, 34px); }
+    .grid2 { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px; margin: 12px 0 22px; }
+    .card { background: var(--panel-dark); border: 1px solid var(--outline); border-radius: 18px; padding: 14px; text-align: left; }
     .card label { display:block; font-size:14px; opacity:.9; margin-bottom:6px; }
-    .card select, .card input[type="number"] {
-      width: 100%;
-      padding: 10px 12px;
-      border-radius: 12px;
-      border: 1px solid var(--outline);
-      background: #2d6356;
-      color: var(--text);
-      font-size: 16px;
-      outline: none;
-    }
-    .btn {
-      background: #58b68c;
-      border: none;
-      color: #0f2e27;
-      font-weight: 700;
-      padding: 12px 18px;
-      border-radius: 14px;
-      cursor: pointer;
-      transition: transform .05s ease, filter .2s ease;
+    .card select { width: 100%; padding: 10px 12px; border-radius: 12px; border: 1px solid var(--outline); background: #2d6356; color: var(--text); font-size: 16px; outline: none; }
+    .btn { background: #58b68c; border: none; color: #0f2e27; font-weight: 700;
+      padding: 12px 18px; border-radius: 14px; cursor: pointer; transition: transform .05s ease, filter .2s ease;
       box-shadow: 0 8px 18px rgba(0,0,0,.18);
     }
     .btn:active { transform: translateY(1px); }
     .btn.secondary { background: #6aa89a; color: #09322a; }
-
-    /* Game Screen */
-    .question {
-      display: grid;
-      place-items: center;
-      background: #2b6d5f;
-      border-radius: 18px;
-      border: 1px solid var(--outline);
-      margin: 12px 0 16px;
-      padding: 18px;
-      min-height: 120px;
-      text-align: center;
+    .question { display: grid; place-items: center; background: #2b6d5f;
+      border-radius: 18px; border: 1px solid var(--outline); margin: 12px 0 16px; padding: 18px; min-height: 120px; text-align: center;
     }
-    .question .expr {
-      font-size: clamp(42px, 9vw, 86px);
-      font-weight: 900;
-      letter-spacing: 1px;
-      text-shadow: 0 4px 0 rgba(0,0,0,.12);
-    }
-
-    .choices {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 12px;
-    }
-    .choice {
-      background: #2f7a68;
-      border: 2px solid rgba(255,255,255,.18);
-      border-radius: 16px;
-      min-height: 68px;
-      display: grid;
-      place-items: center;
-      font-size: clamp(22px, 4vw, 32px);
-      font-weight: 800;
-      cursor: pointer;
-      user-select: none;
-      transition: transform .04s ease, background .2s ease, border-color .2s ease, filter .2s ease;
+    .question .expr { font-size: clamp(42px, 9vw, 86px); font-weight: 900; letter-spacing: 1px; text-shadow: 0 4px 0 rgba(0,0,0,.12); }
+    .choices { display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px; }
+    .choice { background: #2f7a68; border: 2px solid rgba(255,255,255,.18); border-radius: 16px;
+      min-height: 68px; display: grid; place-items: center; font-size: clamp(22px, 4vw, 32px); font-weight: 800;
+      cursor: pointer; user-select: none; transition: transform .04s ease, background .2s ease, border-color .2s ease, filter .2s ease;
     }
     .choice:hover { filter: brightness(1.05); }
     .choice:active { transform: translateY(1px); }
     .choice.correct { background: var(--right); color: #0b4025; border-color: rgba(0,0,0,.08); }
     .choice.wrong   { background: var(--wrong); color: #fff; border-color: rgba(0,0,0,.08); }
     .choice.disabled { pointer-events: none; opacity: .9; }
-
     .controls { display:flex; gap:10px; justify-content: center; margin-top: 14px; }
-
-    /* End Screen */
-    .end {
-      text-align: center;
-      padding: 18px 8px 8px;
-    }
+    .end { text-align: center; padding: 18px 8px 8px; position: relative; z-index: 3; }
     .big-score { font-size: clamp(36px, 8vw, 70px); font-weight: 900; margin: 0 0 6px; }
-    .msg { font-size: clamp(16px, 3.5vw, 22px); opacity: .95; margin-bottom: 14px; }
 
-    /* Progress bar */
-    .progress {
-      height: 10px;
-      background: #2b6d5f;
-      border-radius: 999px;
-      overflow: hidden;
-      border: 1px solid var(--outline);
-    }
+    .nilai-hijau { color: #2ecc71; }
+    .nilai-hijau-muda { color: #00ff99; }
+    .nilai-kuning { color: #f1c40f; }
+    .nilai-merah { color: #e74c3c; }
+
+    .msg { font-size: clamp(16px, 3.5vw, 22px); opacity: .95; margin-bottom: 14px; }
+    .progress { height: 10px; background: #2b6d5f; border-radius: 999px; overflow: hidden; border: 1px solid var(--outline); }
     .bar { height: 100%; width: 0%; background: #84f0b8; transition: width .3s ease; }
+
+    .celebration-container {
+      pointer-events: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 5;
+    }
+    .celebration-img {
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      animation: fall linear forwards;
+    }
+    @keyframes fall {
+      0% { transform: translateY(-100px) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(110vh) rotate(720deg); opacity: 0; }
+    }
   </style>
 </head>
 <body>
@@ -185,11 +115,12 @@
     <!-- Start Screen -->
     <section class="screen start active" id="startScreen">
       <h1>Siap latihan cepat? 🎯</h1>
-      <p>Semua soal dari <strong>perkalian 2 sampai 9</strong>. Tidak ada perkalian dengan 1 atau 10, sesuai permintaan.</p>
       <div class="grid2">
         <div class="card">
           <label for="jumlah">Jumlah Soal</label>
           <select id="jumlah">
+            <option value="3">3</option>
+            <option value="5">5</option>
             <option value="10">10</option>
             <option value="15">15</option>
             <option value="20" selected>20</option>
@@ -201,7 +132,14 @@
           <label>Mode Pilihan</label>
           <select id="mode">
             <option value="campur" selected>Campur (acak)</option>
-            <option value="terurut">Terurut (2×2 s/d 9×9)</option>
+            <option value="2">Perkalian 2</option>
+            <option value="3">Perkalian 3</option>
+            <option value="4">Perkalian 4</option>
+            <option value="5">Perkalian 5</option>
+            <option value="6">Perkalian 6</option>
+            <option value="7">Perkalian 7</option>
+            <option value="8">Perkalian 8</option>
+            <option value="9">Perkalian 9</option>
           </select>
         </div>
       </div>
@@ -210,12 +148,10 @@
 
     <!-- Game Screen -->
     <section class="screen" id="gameScreen">
-      <div class="question">
-        <div class="expr" id="expr">2 × 8</div>
-      </div>
+      <div class="question"><div class="expr" id="expr">2 × 8</div></div>
       <div class="choices" id="choices"></div>
       <div class="controls">
-        <button class="btn secondary" id="btnSkip" title="Lewati soal ini (tidak menambah skor)">Lewati ⏭</button>
+        <button class="btn secondary" id="btnSkip">Lewati ⏭</button>
         <button class="btn" id="btnNext" style="display:none">Soal Berikutnya ➜</button>
       </div>
     </section>
@@ -224,11 +160,12 @@
     <section class="screen end" id="endScreen">
       <div class="big-score" id="finalScore">0/0</div>
       <div class="msg" id="finalMsg">Keren! 😄</div>
-      <div class="controls">
-        <button class="btn" id="btnRestart">Main Lagi 🔁</button>
-      </div>
+      <div class="controls"><button class="btn" id="btnRestart">Main Lagi 🔁</button></div>
     </section>
   </div>
+
+  <!-- Container efek meriah -->
+  <div class="celebration-container" id="celebration"></div>
 
   <script>
     const startScreen = document.getElementById('startScreen');
@@ -252,32 +189,49 @@
 
     const finalScore = document.getElementById('finalScore');
     const finalMsg = document.getElementById('finalMsg');
+    const celebration = document.getElementById('celebration');
 
-    // State
-    let pairs = []; // [{a,b}] tanpa 1 dan 10
+    let pairs = [];
     let idx = 0;
     let score = 0;
+    let skippedQuestions = [];
+    let totalSoalDipilih = 0;
+    let celebrationInterval = null;
 
-    function buildAllPairs() {
-      const nums = [2,3,4,5,6,7,8,9];
-      const list = [];
-      for (const a of nums) for (const b of nums) list.push({a,b});
-      return list; // 64
+    function shuffle(arr) {
+      for (let i=arr.length-1;i>0;i--){
+        const j=Math.floor(Math.random()*(i+1));
+        [arr[i],arr[j]]=[arr[j],arr[i]];
+      }
+      return arr;
     }
-
-    function shuffle(arr) { for (let i=arr.length-1;i>0;i--){ const j=Math.floor(Math.random()*(i+1)); [arr[i],arr[j]]=[arr[j],arr[i]]; } return arr; }
 
     function startGame(){
       const total = parseInt(jumlahSel.value,10);
       const mode = modeSel.value;
 
-      const all = buildAllPairs();
-      if (mode === 'campur') shuffle(all);
-      // Potong sesuai jumlah
-      pairs = all.slice(0, Math.min(total, all.length));
+      let all = [];
+      if (mode === 'campur') {
+        for (let a=2; a<=9; a++) {
+          for (let b=2; b<=9; b++) {
+            all.push({a,b});
+          }
+        }
+      } else {
+        const num = parseInt(mode,10);
+        for (let b=2; b<=9; b++) {
+          all.push({a:num, b:b});
+        }
+      }
 
-      idx = 0; score = 0;
-      pTotal.textContent = pairs.length;
+      shuffle(all);
+      pairs = all.slice(0, Math.min(total, all.length));
+      totalSoalDipilih = pairs.length;
+
+      idx = 0;
+      score = 0;
+      skippedQuestions = [];
+      pTotal.textContent = totalSoalDipilih;
       pScore.textContent = score;
       pNo.textContent = 0;
       bar.style.width = '0%';
@@ -285,7 +239,6 @@
       startScreen.classList.remove('active');
       endScreen.classList.remove('active');
       gameScreen.classList.add('active');
-
       renderQuestion();
     }
 
@@ -294,13 +247,10 @@
       const correct = a*b;
       exprEl.textContent = `${a} × ${b}`;
 
-      // generate options
       const opts = generateOptions(correct, a, b);
-      // clear UI
       choicesEl.innerHTML = '';
       btnNext.style.display = 'none';
 
-      // create buttons
       opts.forEach((val)=>{
         const div = document.createElement('div');
         div.className = 'choice';
@@ -310,37 +260,28 @@
       });
 
       pNo.textContent = idx+1;
-      const pct = ((idx) / pairs.length) * 100;
+      const pct = ((idx) / totalSoalDipilih) * 100;
       bar.style.width = pct + '%';
     }
 
     function generateOptions(correct, a, b){
-      // kumpulkan kandidat salah yang masih masuk akal
-      const set = new Set([correct]);
       const candidates = [];
-
-      // gunakan nilai sekitar hasil yang benar, dan hasil perkalian tetangga
       const deltas = [ -8,-6,-4,-3,-2,2,3,4,6,8,10,12];
       for (const d of deltas) {
         const v = correct + d;
         if (v > 0) candidates.push(v);
       }
-      // hasil perkalian tetangga
-      const nearPairs = [
-        (a+1)*b, (a-1)*b, a*(b+1), a*(b-1)
-      ].filter(v=>v>0);
+      const nearPairs = [(a+1)*b, (a-1)*b, a*(b+1), a*(b-1)].filter(v=>v>0);
       candidates.push(...nearPairs);
 
-      // acak kandidat dan ambil 3 unik yang tidak sama dengan benar
       shuffle(candidates);
       const options = [correct];
       for (const v of candidates){
         if (!options.includes(v)) options.push(v);
         if (options.length===4) break;
       }
-      // Jika belum cukup (kasus langka), isi dengan angka acak positif
       while (options.length<4){
-        const r = correct + Math.floor(Math.random()*12)+2; // jaga jarak
+        const r = correct + Math.floor(Math.random()*12)+2;
         if (!options.includes(r)) options.push(r);
       }
       return shuffle(options);
@@ -356,7 +297,6 @@
         pScore.textContent = score;
       } else {
         el.classList.add('wrong');
-        // tandai yang benar
         const right = nodes.find(n => Number(n.textContent) === correct);
         if (right) right.classList.add('correct');
       }
@@ -366,14 +306,21 @@
     function nextQuestion(){
       idx++;
       if (idx >= pairs.length){
-        endGame();
+        if (skippedQuestions.length > 0) {
+          pairs = skippedQuestions;
+          skippedQuestions = [];
+          idx = 0;
+          renderQuestion();
+        } else {
+          endGame();
+        }
       } else {
         renderQuestion();
       }
     }
 
     function skipQuestion(){
-      // Lewati tanpa skor; tetap lanjut
+      skippedQuestions.push(pairs[idx]);
       nextQuestion();
     }
 
@@ -381,41 +328,54 @@
       gameScreen.classList.remove('active');
       endScreen.classList.add('active');
 
-      finalScore.textContent = `${score}/${pairs.length}`;
-      const pct = Math.round((score/pairs.length)*100);
+      finalScore.textContent = `${score}/${totalSoalDipilih}`;
+      const pct = Math.round((score/totalSoalDipilih)*100);
+
+      finalScore.className = "big-score";
+      if (pct >= 90) finalScore.classList.add("nilai-hijau-muda");
+      else if (pct >= 75) finalScore.classList.add("nilai-hijau");
+      else if (pct >= 50) finalScore.classList.add("nilai-kuning");
+      else finalScore.classList.add("nilai-merah");
+
       const msg = pct >= 90 ? 'Super sekali! 🌟'
                 : pct >= 75 ? 'Hebat! Pertahankan! 💪'
                 : pct >= 50 ? 'Bagus! Terus latihan ya! 🙂'
                 : 'Semangat! Coba lagi, pasti bisa! 🚀';
       finalMsg.textContent = `${msg} (Nilai: ${pct})`;
-
       bar.style.width = '100%';
-      pNo.textContent = pairs.length;
+      pNo.textContent = totalSoalDipilih;
+
+      if (pct === 100) {
+        startCelebration();
+      }
     }
 
-    // Events
+    function createFallingImg(){
+      const img = document.createElement('img');
+      img.src = "https://i.imgur.com/VkKwPoq.png";
+      img.className = "celebration-img";
+      img.style.left = Math.random()*100 + "vw";
+      img.style.animationDuration = (3 + Math.random()*2) + "s";
+      img.style.transform = `rotate(${Math.random()*360}deg) scale(${0.6 + Math.random()*0.8})`;
+      celebration.appendChild(img);
+
+      img.addEventListener('animationend', ()=> img.remove());
+    }
+
+    function startCelebration(){
+      if (celebrationInterval) clearInterval(celebrationInterval);
+      celebrationInterval = setInterval(()=> createFallingImg(), 300);
+    }
+
+    // 🔹 Event listeners
     btnStart.addEventListener('click', startGame);
     btnNext.addEventListener('click', nextQuestion);
     btnSkip.addEventListener('click', skipQuestion);
     btnRestart.addEventListener('click', ()=>{
-      startScreen.classList.add('active');
       endScreen.classList.remove('active');
-      gameScreen.classList.remove('active');
-    });
-
-    // Keyboard support: 1..4 memilih opsi, Enter untuk next
-    document.addEventListener('keydown', (e)=>{
-      if (gameScreen.classList.contains('active')){
-        const keys = ['1','2','3','4'];
-        if (keys.includes(e.key)){
-          const idx = Number(e.key)-1;
-          const node = document.querySelectorAll('.choice')[idx];
-          if (node && !node.classList.contains('disabled')) node.click();
-        }
-        if (e.key === 'Enter'){
-          if (btnNext.style.display !== 'none') btnNext.click();
-        }
-      }
+      startScreen.classList.add('active');
+      clearInterval(celebrationInterval);
+      celebration.innerHTML = "";
     });
   </script>
 </body>
