--- a/kelas-5/lembah/AKM/numerasi/numerasi.html
+++ b/kelas-5/lembah/AKM/numerasi/numerasi.html
@@ -70,7 +70,7 @@ h1 img {
         <a href=#"soal-wisata1.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
-        <img src="https://i.imgur.com/oDj5njL.png" alt="Ikon"> Latihan Soal ANBK
+        <img src="https://i.imgur.com/oDj5njL.png" alt="Ikon"> Latihan Soal Numerasi
     </h1>
 
     <!-- Dropdown Pilihan Latihan -->
