--- a/kelas-5/lembah/AKM/numerasi/soal2.html
+++ b/kelas-5/lembah/AKM/numerasi/soal2.html
@@ -170,9 +170,9 @@
     </form>
 
     <div class="navigasi">
-      <a href="AKM.html" class="btn-kembali">⬅ Kembali</a>
+      <a href="numerasi.html" class="btn-kembali">⬅ Kembali</a>
       <img src="https://i.imgur.com/LqQVDoS.png" alt="Ikon Navigasi">
-      <a href="AKM.html" class="btn-lanjut">Lanjut ➡</a>
+      <a href="numerasi.html" class="btn-lanjut">Lanjut ➡</a>
     </div>
   </div>
 
