--- a/kelas-5/lembah/AKM/numerasi/soal3.html
+++ b/kelas-5/lembah/AKM/numerasi/soal3.html
@@ -118,9 +118,9 @@
 
   <!-- Tombol Navigasi -->
   <div class="navigasi">
-    <button class="btn-kembali" onclick="kembali()">⬅ Kembali</button>
+    <button class="numerasi.html" onclick="kembali()">⬅ Kembali</button>
     <img src="https://i.imgur.com/LqQVDoS.png" alt="Logo Tengah">
-    <button class="btn-lanjut" onclick="lanjut()">Selanjutnya ➡</button>
+    <button class="numerasi.html" onclick="lanjut()">Selanjutnya ➡</button>
   </div>
 
   <!-- Popup Pembahasan -->
