--- a/kelas-5/lembah/AKM/numerasi/soal3.html
+++ b/kelas-5/lembah/AKM/numerasi/soal3.html
@@ -160,11 +160,11 @@
     }
 
     function kembali() {
-      window.location.href = "AKM.html";
+      window.location.href = "numerasi.html";
     }
 
     function lanjut() {
-      window.location.href = "AKM.html";
+      window.location.href = "numerasi.html";
     }
   </script>
 </body>
