--- a/kelas-5/lembah/AKM/numerasi/soal5.html
+++ b/kelas-5/lembah/AKM/numerasi/soal5.html
@@ -163,9 +163,9 @@
         <div id="feedback"></div>
 
         <div class="buttons">
-            <button id="backBtn" onclick="window.location='AKM.html'">Kembali</button>
+            <button id="backBtn" onclick="window.location='numerasi.html'">Kembali</button>
             <img src="https://i.imgur.com/RChzgsF.png" alt="Gambar tengah">
-            <button id="nextBtn" onclick="window.location='AKM.html'">Lanjut</button>
+            <button id="nextBtn" onclick="window.location='numerasi.html'">Lanjut</button>
         </div>
 
         <button id="discussionBtn" disabled>Lihat Pembahasan</button>
