--- a/kelas-5/lembah/AKM/numerasi/soal6.html
+++ b/kelas-5/lembah/AKM/numerasi/soal6.html
@@ -123,8 +123,8 @@
         </div>
 
         <div class="inline-nav">
-          <div class="nav-btn"><a href="AKM.html" class="btn secondary">Kembali</a></div>
-          <div class="nav-btn"><a href="AKM.html" class="btn secondary">Lanjut</a></div>
+          <div class="nav-btn"><a href="numerasi.html" class="btn secondary">Kembali</a></div>
+          <div class="nav-btn"><a href="numerasi.html" class="btn secondary">Lanjut</a></div>
         </div>
 
         <div id="hasil" class="result"></div>
