--- a/kelas-5/lembah/perkalian.html
+++ b/kelas-5/lembah/perkalian.html
@@ -106,7 +106,7 @@
     @keyframes fall {
       0% { transform: translateY(-20vh) rotate(0deg); opacity: 1; }
       60% { opacity: 1; }
-      100% { transform: translateY(110vh) rotate(720deg); opacity: 0; }
+      100% { transform: translateY(120dvh) rotate(720deg); opacity: 0; }
     }
     /* Animasi goyangan/angin horizontal (alternate) */
     @keyframes sway {
