--- a/kelas-5/lembah/AKM/numerasi/soal8.html
+++ b/kelas-5/lembah/AKM/numerasi/soal8.html
@@ -116,8 +116,8 @@
     <div id="hasil"></div>
 
     <div class="navigasi">
-      <button onclick="window.location.href='lembah.html'">⬅️ Kembali</button>
-      <button onclick="window.location.href='lembah.html'">Lanjutkan ➡️</button>
+      <button onclick="window.location.href='numerasi.html'">⬅️ Kembali</button>
+      <button onclick="window.location.href='numerasi.html'">Lanjutkan ➡️</button>
     </div>
   </div>
 
