--- a/kelas-5/lembah/AKM/numerasi/numerasi.html
+++ b/kelas-5/lembah/AKM/numerasi/numerasi.html
@@ -86,6 +86,7 @@ h1 img {
 <option value="soal8.html">Soal 8</option>
 <option value="soal9.html">Soal 9</option>
 <option value="soal10.html">Soal 10</option>
+        <option value="soal11.html">Soal 11</option>
     </select>
 </div>
 
