--- a/kelas-5/lembah/AKM/numerasi/numerasi.html
+++ b/kelas-5/lembah/AKM/numerasi/numerasi.html
@@ -88,6 +88,7 @@ h1 img {
 <option value="soal10.html">Soal 10</option>
         <option value="soal11.html">Soal 11</option>
         <option value="soal12.html">Soal 12</option>
+        <option value="soal13.html">Soal 13</option>
     </select>
 </div>
 
