--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -183,9 +183,9 @@
       <span class="emoji">🌱</span>
       Danau PLH
     </a>
-    <a href="#latihan5.html" class="map-item">
+    <a href="tugas.html" class="map-item">
       <span class="emoji">🧠</span>
-      Tantangan Logika
+      Tugas
     </a>
   </div>
 
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
