--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -183,7 +183,7 @@
       <span class="emoji">🌱</span>
       Danau PLH
     </a>
-    <a href="tugas.html" class="map-item">
+    <a href="tugas/tugas.html" class="map-item">
       <span class="emoji">🧠</span>
       Tugas
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
