--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -124,13 +124,13 @@
 
   <!-- Kotak Tugas -->
   <div class="task-container">
-    <div class="task-box" onclick="downloadFile('kelas-5/tugas/Latihan Soal Bahasa Indonesia kelas 5 Semester 1.docx')">
+    <div class="task-box" onclick="downloadFile('Latihan Soal Bahasa Indonesia kelas 5 Semester 1.docx')">
       📘 Bahasa Indonesia
     </div>
-    <div class="task-box" onclick="downloadFile('kelas-5/tugas/Latihan Soal Matematika kelas 5 Semester 1.docx')">
+    <div class="task-box" onclick="downloadFile('Latihan Soal Matematika kelas 5 Semester 1.docx')">
       📗 Matematika
     </div>
-    <div class="task-box" onclick="downloadFile('kelas-5/tugas/Latihan Soal Pancasila kelas 5 Semester 1.docx')">
+    <div class="task-box" onclick="downloadFile('Latihan Soal Pancasila kelas 5 Semester 1.docx')">
       📙 Pancasila
     </div>
   </div>
