--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -127,7 +127,7 @@
     <div class="task-box" onclick="downloadFile('Latihan Soal Bahasa Indonesia kelas 5 Semester 1.docx')">
       📘 Bahasa Indonesia
     </div>
-    <div class="task-box" onclick="downloadFile('Latihan Soal Matematika kelas 5 Semester 1.docx')">
+    <div class="task-box" onclick="downloadFile('Latihan Soal Matematika kelas 5 semester 1.docx')">
       📗 Matematika
     </div>
     <div class="task-box" onclick="downloadFile('Latihan Soal Pancasila kelas 5 Semester 1.docx')">
