--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -71,7 +71,7 @@
       text-shadow: 1px 1px 2px rgba(255,255,255,0.6);
     }
 
-    /* Kotak Tugas */
+    /* Dropdown Menu */
     .task-container {
       display: flex;
       justify-content: center;
@@ -81,7 +81,12 @@
       max-width: 900px;
     }
 
-    .task-box {
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropbtn {
       flex: 1 1 250px;
       background: rgba(255,255,255,0.9);
       border-radius: 12px;
@@ -92,11 +97,45 @@
       cursor: pointer;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       color: #0288d1;
+      border: none;
+      width: 250px;
     }
 
-    .task-box:hover {
+    .dropbtn:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background: rgba(255,255,255,0.95);
+      border-radius: 8px;
+      min-width: 200px;
+      z-index: 1;
+      margin-top: 5px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+    }
+
+    .dropdown-content a {
+      display: block;
+      padding: 10px;
+      text-decoration: none;
+      color: #0288d1;
+      font-weight: bold;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .dropdown-content a:last-child {
+      border-bottom: none;
+    }
+
+    .dropdown-content a:hover {
+      background: #f1f1f1;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
     }
   </style>
 </head>
@@ -121,16 +160,91 @@
     <h1>📚 Tugas Kelas 5</h1>
   </div>
 
-  <!-- Kotak Tugas -->
+  <!-- Kotak Dropdown Tugas -->
   <div class="task-container">
-    <div class="task-box" onclick="downloadFile('Latihan Soal Bahasa Indonesia kelas 5 Semester 1.docx')">
-      📘 Bahasa Indonesia
+    <!-- Bahasa Indonesia -->
+    <div class="dropdown">
+      <button class="dropbtn">📘 Bahasa Indonesia</button>
+      <div class="dropdown-content">
+        <a href="#" onclick="downloadFile('Latihan Soal Bahasa Indonesia kelas 5 Semester 1.docx')">Tugas 1</a>
+        <a href="#" onclick="downloadFile('Latihan Soal Bahasa Indonesia 2 Kelas 5 Semester 1.docx')">Tugas 2</a>
+        <a href="#">Tugas 3</a>
+        <a href="#">Tugas 4</a>
+        <a href="#">Tugas 5</a>
+        <a href="#">Tugas 6</a>
+        <a href="#">Tugas 7</a>
+        <a href="#">Tugas 8</a>
+        <a href="#">Tugas 9</a>
+        <a href="#">Tugas 10</a>
+      </div>
     </div>
-    <div class="task-box" onclick="downloadFile('Latihan Soal Matematika kelas 5 semester 1.docx')">
-      📗 Matematika
+
+    <!-- Matematika -->
+    <div class="dropdown">
+      <button class="dropbtn">📗 Matematika</button>
+      <div class="dropdown-content">
+        <a href="#" onclick="downloadFile('Latihan Soal Matematika kelas 5 semester 1.docx')">Tugas 1</a>
+        <a href="#">Tugas 2</a>
+        <a href="#">Tugas 3</a>
+        <a href="#">Tugas 4</a>
+        <a href="#">Tugas 5</a>
+        <a href="#">Tugas 6</a>
+        <a href="#">Tugas 7</a>
+        <a href="#">Tugas 8</a>
+        <a href="#">Tugas 9</a>
+        <a href="#">Tugas 10</a>
+      </div>
     </div>
-    <div class="task-box" onclick="downloadFile('Latihan Soal Pancasila kelas 5 Semester 1.docx')">
-      📙 Pancasila
+
+    <!-- Pancasila -->
+    <div class="dropdown">
+      <button class="dropbtn">📙 Pancasila</button>
+      <div class="dropdown-content">
+        <a href="#" onclick="downloadFile('Latihan Soal Pancasila kelas 5 Semester 1.docx')">Tugas 1</a>
+        <a href="#">Tugas 2</a>
+        <a href="#">Tugas 3</a>
+        <a href="#">Tugas 4</a>
+        <a href="#">Tugas 5</a>
+        <a href="#">Tugas 6</a>
+        <a href="#">Tugas 7</a>
+        <a href="#">Tugas 8</a>
+        <a href="#">Tugas 9</a>
+        <a href="#">Tugas 10</a>
+      </div>
+    </div>
+
+    <!-- IPAS -->
+    <div class="dropdown">
+      <button class="dropbtn">🌍 IPAS</button>
+      <div class="dropdown-content">
+        <a href="#" onclick="downloadFile('Latihan Soal IPAS Kelas 5 Semester 1.docx')">Tugas 1</a>
+        <a href="#">Tugas 2</a>
+        <a href="#">Tugas 3</a>
+        <a href="#">Tugas 4</a>
+        <a href="#">Tugas 5</a>
+        <a href="#">Tugas 6</a>
+        <a href="#">Tugas 7</a>
+        <a href="#">Tugas 8</a>
+        <a href="#">Tugas 9</a>
+        <a href="#">Tugas 10</a>
+      </div>
+    </div>
+
+    <!-- Bahasa Jawa -->
+    <div class="dropdown">
+      <button class="dropbtn">🎋 Bahasa Jawa</button>
+      <div class="dropdown-content">
+        <a href="#" onclick="downloadFile('Latihan Soal Bahasa Jawa Kelas 5 Semester 1.docx')">Tugas 1</a>
+        <a href="#">Tugas 2</a>
+        <a href="#">Tugas 3</a>
+        <a href="#">Tugas 4</a>
+        <a href="#">Tugas 5</a>
+        <a href="#">Tugas 6</a>
+        <a href="#">Tugas 7</a>
+        <a href="#">Tugas 8</a>
+        <a href="#">Tugas 9</a>
+        <a href="#">Tugas 10</a>
+      </div>
     </div>
   </div>
 
